# wqdrone

./: README.md  main.tex  starting.txt  starting_ros.txt  testwlan.py
3dmodel/: SensorMountBox.dxf  sensormountv2.dxf
arduino/LoRaTest/: LoRaTest.ino
arduino/PowerSensing/: PowerSensing.ino  pinout.txt
arduino/main/: main.ino
arduino/teensy/: pinout.txt  teensy.ino
chapters/: introduction.tex
dashboard/: app.py  interpolDashboarding.ipynb
dashboard/.ipynb_checkpoints/: app-checkpoint.py  interpolDashboarding-checkpoint.ipynb
dashboard/data/: TDS.tif  TDS_test.tif  Temp.tif  Turbidity.tif  depth.tif  pH.tif  ph.tif  temp.tif  test.tif
dashboard_timeseries/: dataframe.geojson  interpolenv.yml
dashboard_v2/: app.py  dataframe.csv  dataframe.geojson  interpolDashboarding.ipynb
doc/: main_text_md.Rmd  main_text_md.tex
my_test_bag/: metadata.yaml  my_test_bag_0.db3
paper/: main.tex
plotting/: app.py  dataframe.csv  plotting.ipynb  raster.html
post_processing/: interpolDashboarding.ipynb  interpolNB.ipynb  interpolenv.yml
python_testing_serial/: kogger_example.py  lora.py  lora_receive.py  lora_send.py  teensy.py
python_testing_sonar/: receiving.py  sending.py  testsonar.py
ros_dev_ws/src/lora/: package.xml  setup.cfg  setup.py
ros_dev_ws/src/lora/lora/: lora_cmd_receive.py  lora_cmd_send.py  lora_gps_lanlot.py  lora_gps_lanlot_receive.py  lora_receive.py  lora_sonar_receive.py  lora_sonar_send.py  lora_wq_gps_receive.py  lora_wq_gps_send.py
stl_models/: main_board_platforn.stl  sensor_board_platform.stl
titles/: titlepage_2.tex
(+868 files in other folders)
