<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lora</name>
  <version>0.0.0</version>
  <description>LoRa topic sender and receiver for inside the ROS system</description>
  <maintainer email="jurrian.doornbos@wur.nl">Jurrian Doornbos</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <exec_depend>serial</exec_depend>
    <exec_depend>time</exec_depend>
    <exec_depend>rclpy</exec_depend>
    
  </export>
</package>
